welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:3: error: not found: value setBrosseCouleur
	setBrosseCouleur(c)
        ^FlowerPot:11: error: not found: value setBrosseCouleur
	setBrosseCouleur(Color:YELLOW)
        ^