welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def Fleur(c:Color) {
	setBrosseCouleur(c)
	baisseBrosse()
	avance();avance()
	recule()
	gauche()
	avance()
	recule();recule()
	avance()
	setBrosseCouleur(Color:YELLOW)
	leveBrosse()
	droite()
	recule()

	
}
